--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="guest-container">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div id="guest-counter" class="guest-score">0</div>
                 <div class="guest-increment">
                     <button onclick="guestIncrementOne()">+1</button>
