--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <title>Basketball Score Counter</title>
-        <link rel="stylesheet" href="index.scss">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div id="local-time"></div>
